init the game of life

--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/styles.css
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/styles.css
@@ -1,11 +1,5 @@
-/*
-#2F1847
-#624763
-#C62E65
-#F9B3D1
-#D63AF9
-*/
-
 body {
-    background-color: #624763;
+    background-color: #353353;
+    padding: 0;
+    margin: 0;
 }
