--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/styles.css
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/styles.css
@@ -1,42 +1,11 @@
 body {
-    padding: 0;
     margin: 0;
-    min-height: 500vh;
-    background-color: rgb(139, 201, 228);
-    animation: body 1s linear;
+    background-color: #f9f9ff;
   }
-  @keyframes body {
-    to {
-      background-color: rgb(19, 48, 97);
-    }
-}
   
-.progress {
-  height: 5px;
-  width: 0%;
-  background-color: #a03838;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999; /* Ensure the progress bar is on top of other elements */
-  animation: progress 1s linear;  
-}
-@keyframes progress {
-  to {
-    background-color: rgb(249, 21, 0);
-    width: 100%;
+  html{
+    scroll-behavior: smooth;;
   }
-}
-
-:root * {
-  /* Pause the animation */
-  animation-play-state: paused;
-  /* Bind the animation to scroll */
-  animation-delay: calc(var(--scroll) * -1s);
-  /* These last 2 properites clean up overshoot weirdness */
-  animation-iteration-count: 1;
-  animation-fill-mode: both;
-}
 
 /* Navbar */
 .navbar {
@@ -63,45 +32,9 @@ body {
     color: #FFD15C;
 }
 
-/* Implement Responsive CSS */
-/* Small devices (up to 576px) */
-@media (max-width: 576px) {
-    /* Adjust styles for small screens */
-}
-  
-/* Medium devices (between 577px and 992px) */
-@media (min-width: 577px) and (max-width: 992px) {
-    /* Adjust styles for medium screens */
-}
-
-/* Large devices (above 992px) */
-@media (min-width: 993px) {
-    /* Adjust styles for large screens */
-}
-
 /* Section */
 section {
-  display: grid;
-  place-items: center;
-  align-content: center;
-  min-height: 100vh;
-}
-
-.hidden {
-  opacity: 0;
-  filter: blur();
-  transform: translateX(-100%);
-  transition: all 1s;
-}
-
-.show {
-  opacity: 1;
-  filter: blur(0);
-  transform: translateX(0);
-}
-
-@media(prefers-reduced-motion) {
-  .hidden {
-    transition: none;
-  }
+    min-height: 100vh;
+    padding-top: 100px;
+    background-color: #f9f9ff;
 }
