--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/styles.css
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/styles.css
@@ -1,9 +1,3 @@
-/* 
-#f64c60
-#353353
-#FFD15C
-*/
-
 body {
     font-family: "Rubik", sans-serif;
     margin: 0;
@@ -23,7 +17,7 @@ body {
 }
 
 .navbar a {
-    color: #FFFFFF;
+    color: #f9f9ff;
     font-size: 16px;
     font-weight: 700;
 }
@@ -40,16 +34,15 @@ body {
     color: #FFD15C;
 }
 
-/* Section */
+/* Section Home */
 .home-page {
     background-color: #353353;
-    color: #FFF;
+    color: #f9f9ff;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: 
-    center;
+    align-items: center;
 }
 
 .fa-hand {
@@ -57,7 +50,7 @@ body {
 }
 
 .btn-openlink {
-    color: #FFF;
+    color: #f9f9ff;
     background: #FF4C60;
     border-radius: 60px;
     font-size: 16px;
@@ -72,25 +65,99 @@ body {
     padding-right: 10px;
 }
 
-
 .logo-image {
     width: 200px;
     height: 105px;
     margin: 30px 0px 50px 0px;
 }
 
+/* Section About */
 .about-page {
-    background-color: #d53c09;
+    color: #f9f9ff;
 }
 
+.myimg {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    border: 5px solid #f9f9ff;
+    overflow: hidden;
+}
+
+.about-container {
+    display: flex;
+    margin: 60px 0px 60px 0px;
+}
+
+.about-img {
+    margin-right: 80px;
+}
+
+.about-card {
+    background-color: #f9f9ff;
+    border-radius: 20px 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
+    color: #454360;
+}
+
+.card-content {
+    display: flex;
+}
+
+.content-list ul li {
+    display: flex;
+    align-items: center;
+
+}
+
+.content-list ul li i {
+    margin-right: 20px;
+}
+
+.myimg {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    border: 5px solid #f9f9ff;
+    overflow: hidden;
+}
+
+.btn-aboutme {
+    color: #f9f9ff;
+    background: #FFD15C;
+    border-radius: 60px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1;
+    padding: 12px 32px;
+    text-decoration: none;
+    margin: 30px 0px 0px 0px;
+}
+
+/* Section Experiences */
 .experiences-page {
     background-color: #13d426;
 }
 
+/* Section Skills */
 .skills-page {
     background-color: #2f57e9;
 }
 
-.works-page {
+/* Section Game */
+.game-page {
 background-color: #e02a73;
+}
+
+/* Game Page */
+.game-name {
+    color: #f9f9ff;
+    text-align: center;
+}
+
+footer.footer {
+    padding: 30px 0;
+    text-align: center;
+    border-top: solid 1px #f9f9ff;
+    color: #f9f9ff;
 }
