--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/styles.css
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/styles.css
@@ -1,7 +1,6 @@
 body {
     font-family: "Rubik", sans-serif;
     margin: 0;
-    background-color: #353353;
     padding-top: 70px;
   }
 
@@ -36,7 +35,6 @@ body {
 
 /* Section Home */
 .home-page {
-    background-color: #353353;
     color: #f9f9ff;
     height: 100vh;
     display: flex;
@@ -134,21 +132,6 @@ body {
     margin: 30px 0px 0px 0px;
 }
 
-/* Section Experiences */
-.experiences-page {
-    background-color: #13d426;
-}
-
-/* Section Skills */
-.skills-page {
-    background-color: #2f57e9;
-}
-
-/* Section Game */
-.game-page {
-background-color: #e02a73;
-}
-
 /* Game Page */
 .game-name {
     color: #f9f9ff;
@@ -156,8 +139,55 @@ background-color: #e02a73;
 }
 
 footer.footer {
+    background-color:#353353;
     padding: 30px 0;
     text-align: center;
     border-top: solid 1px #f9f9ff;
     color: #f9f9ff;
 }
+
+/* Media queries */
+  @media (max-width: 600px) {
+    body {
+      background-color: pink;
+    }
+
+    .about-page {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about-page h1 {
+        text-align: center;
+    }
+
+  }
+  
+  /* If the viewport is between 601px and 800px, set the background color to orange */
+  @media (min-width: 601px) and (max-width: 800px) {
+    body {
+      background-color:aqua;
+    }
+
+    .about-page h1 {
+        text-align: center;
+    }
+
+    .about-card {
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    .card-content {
+        flex-direction: column;
+    }
+
+  }
+  
+  /* If the viewport is 801px or more, set the background color to green */
+  @media (min-width: 801px) {
+    body {
+        background-color: #353353;
+    }
+  }
