--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/index.css
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/index.css
@@ -2,6 +2,7 @@ body {
     font-family: "Rubik", sans-serif;
     margin: 0;
     padding-top: 70px;
+    background-color: #353353;;
   }
 
   ul {
@@ -87,15 +88,13 @@ body {
     margin: 60px 0px 60px 0px;
 }
 
-.about-img {
-    margin-right: 80px;
-}
-
 .about-card {
     background-color: #f9f9ff;
-    border-radius: 20px 20px 20px 20px;
-    padding: 20px 20px 20px 20px;
+    border-radius: 20px;
+    padding: 20px;
     color: #454360;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .card-content {
@@ -145,51 +144,3 @@ footer.footer {
     border-top: solid 1px #f9f9ff;
     color: #f9f9ff;
 }
-
-/* Media queries */
-  @media (max-width: 600px) {
-    body {
-      background-color: pink;
-    }
-
-    .about-page {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .about-page h1 {
-        text-align: center;
-    }
-
-  }
-  
-  /* If the viewport is between 601px and 800px, set the background color to orange */
-  @media (min-width: 601px) and (max-width: 800px) {
-    body {
-      background-color:aqua;
-    }
-
-    .about-page h1 {
-        text-align: center;
-    }
-
-    .about-card {
-        display: flex;
-        flex-direction: column;
-        
-    }
-
-    .card-content {
-        flex-direction: column;
-    }
-
-  }
-  
-  /* If the viewport is 801px or more, set the background color to green */
-  @media (min-width: 801px) {
-    body {
-        background-color: #353353;
-    }
-  }
-
-
